--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ FPS=0.3
 # "ViT-B/32" or ViT-L/14
 CLIP_MODEL=ViT-B/32
 # Location of annotation files
-ANNOTATIONS_DIR=datasets/annotations
+ANNOTATIONS_DIR=./datasets/annotations
 # Classes to process
 TARGET_CLASSES=[1]
 # mean brightness below this = black
