--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ DB_PORT=5432
 ## SHARED ##
 # Location of where to save/access the trained model.
 MODEL=models/clip_classifier.pt
+# XGBoost model location
+BOOST_MODEL=models/segment_meta_model.json
 # How often to grab a frame for the datasets
 FPS=0.3
 # "ViT-B/32" or ViT-L/14
@@ -21,7 +23,7 @@ BLACK_THRESHOLD=1.0
 
 ## CREATE DATASET ##
 ROOT_DIR=/Volumes/TTBS/time_traveler
-SAMPLE_COUNT=10
+SAMPLE_COUNT=2
 CONTENT_BUFFER=180
 
 ## TRAINER ##
