Centralized get_duration. Decreased number of frames for content.

--- a/.env
+++ b/.env
@@ -12,18 +12,20 @@ MODEL=models/clip_classifier.pt
 BOOST_MODEL=models/segment_meta_model.json
 # How often to grab a frame for the datasets
 FPS=0.3
+# Save content less frequently
+CONTENT_FPS=1.0
 # "ViT-B/32" or ViT-L/14
 CLIP_MODEL=ViT-B/32
 # Location of annotation files
 ANNOTATIONS_DIR=./datasets/annotations
 # Classes to process
-TARGET_CLASSES=[0,1,2]
+TARGET_CLASSES=[1,2]
 # mean brightness below this = black
 BLACK_THRESHOLD=1.0
 
 ## CREATE DATASET ##
 ROOT_DIR=/Volumes/TTBS/time_traveler
-SAMPLE_COUNT=2
+SAMPLE_COUNT=3
 CONTENT_BUFFER=180
 
 ## TRAINER ##
@@ -46,4 +48,5 @@ MOTION_THRESHOLD=2.0
 # Minimum confidence before using in calculations
 CONFIDENCE_THRESHOLD=0.9
 #  Model to use for video inference pipeline
-INFERENCE_MODEL=models/clip_classifier.pt
+INFERENCE_MODEL=models/clip_classifier_lg.pt
+INFERENCE_BOOST=models/segment_meta_model_lg.json
