Added a closeness classifier for duration & start comparison.

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ DB_PORT=5432
 MODEL=models/clip_classifier.pt
 # XGBoost model location
 BOOST_MODEL=models/segment_meta_model.json
+CLOSENESS_MODEL=models/closeness_model.json
 # How often to grab a frame for the datasets
 FPS=0.3
 # Save content less frequently
@@ -25,7 +26,7 @@ BLACK_THRESHOLD=1.0
 
 ## CREATE DATASET ##
 ROOT_DIR=/Volumes/TTBS/time_traveler
-SAMPLE_COUNT=3
+SAMPLE_COUNT=100
 CONTENT_BUFFER=180
 
 ## TRAINER ##
@@ -48,5 +49,6 @@ MOTION_THRESHOLD=2.0
 # Minimum confidence before using in calculations
 CONFIDENCE_THRESHOLD=0.9
 #  Model to use for video inference pipeline
-INFERENCE_MODEL=models/clip_classifier_lg.pt
+INFERENCE_CLIP=models/clip_classifier_lg.pt
 INFERENCE_BOOST=models/segment_meta_model_lg.json
+INFERENCE_CLOSENESS=models/closeness_model_lg.json
