--- a/.env
+++ b/.env
@@ -18,7 +18,8 @@ CONTENT_FPS=1.0
 # "ViT-B/32" or ViT-L/14
 CLIP_MODEL=ViT-B/32
 # Location of annotation files
-ANNOTATIONS_DIR=./datasets/annotations
+ANNOTATIONS_DIR=./datasets/annotations/training
+ALL_ANNOTATIONS_DIR=./datasets/annotations/all
 # Classes to process
 TARGET_CLASSES=[1,2]
 # mean brightness below this = black
@@ -26,20 +27,22 @@ BLACK_THRESHOLD=1.0
 
 ## CREATE DATASET ##
 ROOT_DIR=/Volumes/TTBS/time_traveler
-SAMPLE_COUNT=100
+SAMPLE_COUNT=1
 CONTENT_BUFFER=180
 
 ## TRAINER ##
 # Whether to show the confusion matrix
 CONFUSION_MATRIX=False
 # Number of times to loop the datasets
-EPOCH_COUNT=10
+EPOCH_COUNT=8
 # Number of samples sent to model
 DATA_BATCH_SIZE=32
 # Number of labels we are interested in
 LABEL_COUNT=2
 # Is this a retrining run
 RETRAIN=False
+# Model name for retring results
+RETRAIN_MODEL=models/retrained_clip_classifier.pt
 # The class tolerance for the balanced datasets.
 BALANCE_TOLERANCE=8.0
 # mean frame difference below this = low motion
@@ -48,7 +51,9 @@ MOTION_THRESHOLD=2.0
 ## INFERENCE ##
 # Minimum confidence before using in calculations
 CONFIDENCE_THRESHOLD=0.9
-#  Model to use for video inference pipeline
+# Lenght of time in seconds to read from beginning and end of a video.
+READ_LENGTH=30
+#  Models to use for video inference pipeline
 INFERENCE_CLIP=models/clip_classifier_lg.pt
-INFERENCE_BOOST=models/segment_meta_model_lg.json
-INFERENCE_CLOSENESS=models/closeness_model_lg.json
+INFERENCE_BOOST=models/segment_meta_model.json
+INFERENCE_CLOSENESS=models/closeness_model.json
