working on distributed part.

--- a/.env
+++ b/.env
@@ -27,6 +27,7 @@ BLACK_THRESHOLD=1.0
 
 ## CREATE DATASET ##
 ROOT_DIR=/Volumes/TTBS/time_traveler
+PI_ROOT_DIR=/mnt/nas_server/time_traveler
 SAMPLE_COUNT=1
 CONTENT_BUFFER=180
 
@@ -52,8 +53,7 @@ MOTION_THRESHOLD=2.0
 # Minimum confidence before using in calculations
 CONFIDENCE_THRESHOLD=0.9
 # Lenght of time in seconds to read from beginning and end of a video.
-READ_LENGTH=30
+READ_LENGTH=40
 #  Models to use for video inference pipeline
 INFERENCE_CLIP=models/clip_classifier_lg.pt
-INFERENCE_BOOST=models/segment_meta_model.json
 INFERENCE_CLOSENESS=models/closeness_model.json
