--- a/.env
+++ b/.env
@@ -41,7 +41,7 @@ DATA_BATCH_SIZE=32
 # Number of labels we are interested in
 LABEL_COUNT=2
 # Is this a retrining run
-RETRAIN=False
+RETRAIN=True
 # Model name for retring results
 RETRAIN_MODEL=models/retrained_clip_classifier.pt
 # The class tolerance for the balanced datasets.
