--- a/.env
+++ b/.env
@@ -1,59 +1,58 @@
-## DATABASE
-DB_NAME=time_traveler
-DB_USER=postgres
-DB_PASSWORD=m06Ar14u
-DB_HOST=192.168.1.201
-DB_PORT=5432
+BALANCE_TOLERANCE=8.0
+# Is this a retraining run
+BOOL_RETRAIN=False
+# How many seconds to add of content when creating annotation files
+BUFFER_ANNOTATIONS_CONTENT=180
+# Length of time in seconds to read from beginning and end of a video when searching for intro/outro.
+BUFFER_READ_LENGTH=40
 
-## SHARED ##
-# Location of where to save/access the trained model.
-MODEL=models/clip_classifier.pt
-# XGBoost model location
-BOOST_MODEL=models/segment_meta_model.json
-CLOSENESS_MODEL=models/closeness_model.json
+# Whether to show the confusion matrix
+CONFUSION_MATRIX=False
+# Number of samples sent to model
+COUNT_DATA_BATCH=32
+# Number of times to loop the datasets
+COUNT_EPOCH=8
+# Number of episodes per show to return in annotations
+COUNT_SAMPLE=1
+
+DB_HOST=192.168.1.201
+DB_NAME=time_traveler
+DB_PASSWORD=m06Ar14u
+DB_PORT=5432
+DB_USER=postgres
+# Location of annotation files
+DIR_ANNOTATIONS=./datasets/annotations/training
+# Location of ALL the annotation files used thus far.
+DIR_ANNOTATIONS_ALL=./sandbox/annotations/training
+# Mac root directory
+DIR_ROOT=/Volumes/TTBS/time_traveler
+# Raspberry PI root directory
+DIR_ROOT_PI=/mnt/nas_server/time_traveler
+
 # How often to grab a frame for the datasets
 FPS=0.3
 # Save content less frequently
-CONTENT_FPS=1.0
+FPS_CONTENT=1.0
+
 # "ViT-B/32" or ViT-L/14
-CLIP_MODEL=ViT-B/32
-# Location of annotation files
-ANNOTATIONS_DIR=./datasets/annotations/training
-ALL_ANNOTATIONS_DIR=./datasets/annotations/all
+#MODEL_CLIP_BASE=ViT-B/32
+#MODEL_CLIP_DIMENSION=512
+MODEL_CLIP_BASE=ViT-L/14
+MODEL_CLIP_DIMENSION=768
+# Location of where to save/access the trained model.
+MODEL_CLIP="models/clip_classifier_${MODEL_CLIP_DIMENSION}.pt"
+# XGBoost model location
+MODEL_CLOSENESS=models/closeness_model.json
+#  Models to use for video inference pipeline
+MODEL_INFERENCE_CLIP="models/clip_inference_${MODEL_CLIP_DIMENSION}.pt"
+# Model name for retraing model with a different dataset
+MODEL_RETRAIN="models/retrained_clip_classifier_${MODEL_CLIP_DIMENSION}.pt"
 # Classes to process
+
 TARGET_CLASSES=[1,2]
 # mean brightness below this = black
-BLACK_THRESHOLD=1.0
-
-## CREATE DATASET ##
-ROOT_DIR=/Volumes/TTBS/time_traveler
-PI_ROOT_DIR=/mnt/nas_server/time_traveler
-SAMPLE_COUNT=1
-CONTENT_BUFFER=180
-
-## TRAINER ##
-# Whether to show the confusion matrix
-CONFUSION_MATRIX=False
-# Number of times to loop the datasets
-EPOCH_COUNT=8
-# Number of samples sent to model
-DATA_BATCH_SIZE=32
-# Number of labels we are interested in
-LABEL_COUNT=2
-# Is this a retrining run
-RETRAIN=True
-# Model name for retring results
-RETRAIN_MODEL=models/retrained_clip_classifier.pt
-# The class tolerance for the balanced datasets.
-BALANCE_TOLERANCE=8.0
-# mean frame difference below this = low motion
-MOTION_THRESHOLD=2.0
-
-## INFERENCE ##
+THRESHOLD_BLACK=1.0
 # Minimum confidence before using in calculations
-CONFIDENCE_THRESHOLD=0.9
-# Lenght of time in seconds to read from beginning and end of a video.
-READ_LENGTH=40
-#  Models to use for video inference pipeline
-INFERENCE_CLIP=models/clip_classifier_lg.pt
-INFERENCE_CLOSENESS=models/closeness_model.json
+THRESHOLD_CONFIDENCE=0.9
+# mean frame difference below this = low motion
+THRESHOLD_MOTION=2.0
