Better searching for class 1

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-BALANCE_TOLERANCE=8.0
+BALANCE_TOLERANCE=4.0
 # Is this a retraining run
-BOOL_RETRAIN=False
+BOOL_RETRAIN=True
 # How many seconds to add of content when creating annotation files
-BUFFER_ANNOTATIONS_CONTENT=180
+BUFFER_ANNOTATIONS_CONTENT=30
 # Length of time in seconds to read from beginning and end of a video when searching for intro/outro.
-BUFFER_READ_LENGTH=40
+BUFFER_READ_LENGTH=5
 
 # Whether to show the confusion matrix
 CONFUSION_MATRIX=False
@@ -35,10 +35,10 @@ FPS=0.3
 FPS_CONTENT=1.0
 
 # "ViT-B/32" or ViT-L/14
-#MODEL_CLIP_BASE=ViT-B/32
-#MODEL_CLIP_DIMENSION=512
-MODEL_CLIP_BASE=ViT-L/14
-MODEL_CLIP_DIMENSION=768
+MODEL_CLIP_BASE=ViT-B/32
+MODEL_CLIP_DIMENSION=512
+#MODEL_CLIP_BASE=ViT-L/14
+#MODEL_CLIP_DIMENSION=768
 # Location of where to save/access the trained model.
 MODEL_CLIP="models/clip_classifier_${MODEL_CLIP_DIMENSION}.pt"
 # XGBoost model location
